--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1505,6 +1505,7 @@ en:
       mark_bike_recovered: Mark bike recovered
       permission: Permission
       org_can_edit_bike: "%{org_name} can edit this %{bike_type}"
+      organization_can_edit_after_claimed: "and can edit after %{bike_type} claimed"
       edit: Edit
       org_cannot_edit: "%{org_name} can not edit"
       sticker: Sticker
@@ -1517,8 +1518,8 @@ en:
       address: "Address:"
       no_name: no name
       avery_exportable: Avery Exportable
-      is_true: true.
-      is_false: false.
+      is_true: "true"
+      is_false: "false"
       missing_owner_name: missing user name
       missing_address: missing Address
       unable_to_display_additional_information: Unable to display additional information because %{bike_type} is not registered with %{org_name}
