--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2114,3 +2114,198 @@ en:
         personal information as well as other matters set forth therein and which
         explains how and for what purposes we collect, use, retain, disclose and safeguard
         the information you provide to us.
+    privacy:
+      available_here: available here
+      changes: Changes
+      changes_p1: Bike Index may periodically update this policy. We will notify you
+        about significant changes by sending a notice to the primary email address
+        specified in your Bike Index Service Account or by placing a prominent notice
+        on our site.  Such notices shall be considered to be received by you within
+        24 hours of the time it is posted to our website or emailed to you unless
+        we receive notice that the email was not delivered.
+      changes_p2_html: You retain the right to access, amend, correct or delete your
+        personal information where it is inaccurate at any time. To do so, please
+        contact <a href="mailto:contact@bikeindex.org">contact@bikeindex.org</a>.
+      cookies: Cookies
+      cookies_p1: A cookie is a small amount of data, which often includes an anonymous
+        unique identifier, that is sent to your browser from a web site's computers
+        and is stored on your computer's hard drive. The stored information helps
+        you connect more quickly to sites you’ve previously visited.
+      cookies_p2: Cookies are required to use Bike Index Service.
+      cookies_p3: We use cookies to record current session information, but do not
+        use permanent cookies. For example, you are required to re-login to your Bike
+        Index account after a certain period of time has elapsed to protect you against
+        others accidentally or intentionally accessing your Account contents.
+      data_storage: Data Storage
+      data_storage_p1: 'Bike Index uses third party vendors and hosting partners to
+        provide the necessary hardware, software, networking, storage, and related
+        technology required to run Bike Index. Although Bike Index does own the code,
+        databases, and all rights to Bike Index application, you retain all rights
+        to your data.  '
+      disclosure: Disclosure
+      disclosure_p1_html: Bike Index may disclose personally identifiable information
+        under special circumstances, such as to comply with subpoenas or when your
+        actions violate the <a href="https://bikeindex.org/terms">Terms of Service</a>.
+      general_information: General Information
+      general_information_p1: 'We collect the e-mail addresses and other shared personal
+        information of those who communicate with us, aggregate information on the
+        pages Users access or visit and the functions Users perform on pages, and
+        information volunteered by Users (such as survey information and/or site registrations).
+        The information we collect is used to improve the content of our Web pages
+        and the quality of our Service, and is not shared with or sold to other organizations
+        for commercial purposes, except to provide products or services you''ve requested,
+        when we have your permission, or under the following circumstances:'
+      general_information_p2: It is necessary to share information in order to investigate,
+        prevent, or take action regarding illegal activities, suspected fraud, situations
+        involving potential threats to the physical safety of any person, violations
+        of Terms of Service of the specific application, or as otherwise required
+        by law.
+      general_information_p3: We transfer information about you if Bike Index is acquired
+        by or merged with another company. In this unlikely event, Bike Index will
+        notify you via e-mail before information about you is transferred and becomes
+        subject to a different privacy policy.
+      information_gathering: Information Gathering and Usage
+      information_gathering_p1: When you register for Bike Index we may ask for information
+        such as your name, email address, billing address, or phone number. The only
+        required field is e-mail. Whatever you choose to share, You can either show
+        or hide from the public on your Bike Index Account.
+      information_gathering_p2: 'Bike Index uses collected information for the following
+        general purposes: provision of products and services, identification and authentication,
+        services improvement, contact, and research.'
+      last_updated_html: Last updated July 29th, 2017. Previous versions and the change
+        history is %{link}.
+      questions: Questions
+      questions_p1_html: Any questions about this Privacy Policy should be addressed
+        to <a href="mailto:contact@bikeindex.org">contact@bikeindex.org</a>
+      see_terms_link_html: Please see the %{terms_link} for definitions of terms.
+      terms_of_service: Terms of Service
+    terms_text:
+      about_our_terms_of_service: About our Terms of Service
+      available_here: available here
+      best_effort: Bike Index does not warrant that (i) the service will meet your
+        specific requirements, (ii) the service will be uninterrupted, timely, secure,
+        or error-free, (iii) the results that may be obtained from the use of the
+        service will be accurate or reliable, (iv) the quality of any products, services,
+        information, or other material purchased or obtained by you through the service
+        will meet your expectations, and (v) any errors in the Service will be corrected.
+      bike_index_reserves: Bike Index reserves the right at any time and from time
+        to time to modify or discontinue, temporarily or permanently, the Service
+        (or any part thereof) with or without notice.
+      bike_index_shall_not_be_liable: Bike Index shall not be liable to you or to
+        any third party for any modification, suspension or discontinuance of the
+        Service.
+      by_creating_account: By creating an "Account" and using the BikeIndex.org web
+        site ("Service"), or any services of Bike Index, NFP ("Bike Index"), you are
+        agreeing to be bound by the following terms and conditions ("Terms of Service").
+        IF YOU ARE ENTERING INTO THIS AGREEMENT ON BEHALF OF A COMPANY OR OTHER LEGAL
+        ENTITY, YOU REPRESENT THAT YOU HAVE THE AUTHORITY TO BIND SUCH ENTITY, ITS
+        AFFILIATES AND ALL USERS WHO ACCESS OUR SERVICES THROUGH YOUR ACCOUNT TO THESE
+        TERMS AND CONDITIONS, IN WHICH CASE THE TERMS "YOU" OR "YOUR" SHALL REFER
+        TO SUCH ENTITY, ITS AFFILIATES AND USERS ASSOCIATED WITH IT. IF YOU DO NOT
+        HAVE SUCH AUTHORITY, OR IF YOU DO NOT AGREE WITH THESE TERMS AND CONDITIONS,
+        YOU MUST NOT ACCEPT THIS AGREEMENT AND MAY NOT USE THE SERVICES.
+      by_giving_bike_shops_html: By giving bike shops, biking organizations and police
+        departments the ability to register bikes directly for their constituents
+        we aim to incentivize bike registration, support local cycling culture and
+        ensure accurate registrations. We have tried to draft this Terms of Service
+        to be as simple and comprehensible as possible. Unfortunately, the realities
+        of the legal world make that a very difficult task. So, should you have any
+        questions or concerns, or simply want to better understand how we do things
+        at Bike Index, please do not hesitate to %{contact_link}.
+      content_on_the_service: Content" on the Service is defined by any information
+        Users input into the service. Users are defined as those who utilize the Bike
+        Index Service and agree to the Terms of Service. While Bike Index prohibits
+        some conduct and Content on the Service, you understand and agree that Bike
+        Index cannot be responsible for the Content posted on the Service and you
+        nonetheless may be exposed to such materials. you agree to use the Service
+        at your own risk. Violation of any of the terms below will result in the termination
+        of your Account.
+      if_bike_index_html: 'If Bike Index makes material changes to these Terms, we
+        will notify you by email or by posting a notice on our site before the changes
+        are effective. Any new features that augment or enhance the current Service,
+        including the release of new tools and resources, shall be subject to the
+        Terms of Service. Continued use of the Service after any such changes shall
+        constitute your consent to such changes. You can review the most current version
+        of the Terms of Service at any time at: %{terms_link}.'
+      last_updated_html: Last updated July 29th, 2017. Previous versions and the change
+        history is %{link}.
+      may_be_terminated: You understand that the technical processing and transmission
+        of the Service, including your Content, may be transfered unencrypted and
+        involve (a) transmissions over various networks; and (b) changes to conform
+        and adapt to technical requirements of connecting networks or devices.
+      no_abuse: Verbal, physical, written or other abuse (including threats of abuse
+        or retribution) of any Bike Index customer, employee, member, or officer will
+        result in immediate account termination.
+      no_spam: You must not upload, post, host, or transmit unsolicited email, SMSs,
+        or "spam" messages.
+      no_waiver: The failure of Bike Index to exercise or enforce any right or provision
+        of the Terms of Service shall not constitute a waiver of such right or provision.
+        The Terms of Service constitutes the entire agreement between you and Bike
+        Index and govern your use of the Service, superseding any prior agreements
+        between you and Bike Index (including, but not limited to, any prior versions
+        of the Terms of Service). You agree that these Terms of Service and your use
+        of the Service are governed under Illinois law.
+      questions_html: Questions about the Terms of Service should be sent to %{contact_email_link}.
+      section_a_header: 'Section A: User''s Acknowledgment and Acceptance of Terms'
+      section_b_header: 'Section B: Account Terms'
+      section_c_header: 'Section C: Modifications to the service'
+      section_d_header: 'Section D: Copyright and content ownership'
+      section_e_header: 'Section E: General Conditions'
+      support_for_bike_index_services: Support for Bike Index services is currently
+        only available in English, via email.
+      terms_of_service: Terms of Service
+      third_party_vendors: You understand that Bike Index uses third party vendors
+        and hosting partners to provide the necessary hardware, software, networking,
+        storage, and related technology required to run the Service.
+      we_claim_no_ip: We claim no intellectual property rights over the material you
+        provide to the Service. Your profile and materials uploaded remain yours.
+        However, Content that you upload about your bikes can be viewed publicly,
+        and setting your profile to be public will allow information you add to it
+        to be viewed publicly. You agree to allow others to view this Content.
+      we_dont_prescreen_content: Bike Index does not pre-screen Content, but Bike
+        Index and its designee have the right (but not the obligation) in their sole
+        discretion to refuse or remove any Content that is available via the Service.
+      we_may_remove_content: We may, but have no obligation to, remove Content and
+        Accounts containing Content that we determine in our sole discretion are unlawful,
+        offensive, threatening, libelous, defamatory, pornographic, obscene or otherwise
+        objectionable or violates any party's intellectual property or these Terms
+        of Service.
+      welcome_to_bike_index_html: <strong>Welcome to Bike Index</strong>, a 501(c)(3)
+        nonprofit. We've developed a publicly-accessible bike registration service
+        (the "Service") that gives you the ability to save and share your bikes on
+        the internet.
+      you_agree_not_to_resell: You agree not to sell, resell or exploit any portion
+        of the Service, use of the Service, or access to the Service without the express
+        written permission by Bike Index.
+      you_are_responsible_for_content: You are responsible for all Content posted
+        and activity that occurs under your account (even when Content is posted by
+        others who have accounts under your account or access to your account).
+      you_are_responsible_for_security: You are responsible for maintaining the security
+        of your account and password. Bike Index cannot and will not be liable for
+        any loss or damage from your failure to comply with this security obligation.
+      you_may_not_use_for_illegal: You may not use the Service for any illegal or
+        unauthorized purpose. You must not, in the use of the Service, violate any
+        laws in your jurisdiction (including but not limited to copyright or trademark
+        laws).
+      you_must_be_human: You must be a human. Accounts registered by "bots" or other
+        automated methods are not permitted.
+      you_must_notify: You must not modify, adapt or hack the Service or modify another
+        website so as to falsely imply that it is associated with the Service, Bike
+        Index, or any other Bike Index service.
+      you_must_provide_email: You must provide a valid email address in order to complete
+        the signup process.
+      you_shall_defend_bike_index: You shall defend Bike Index against any claim,
+        demand, suit or proceeding made or brought against Bike Index by a third party
+        alleging that your Content, or your use of the Service in violation of this
+        Agreement, infringes or misappropriates the intellectual property rights of
+        a third party or violates applicable law, and shall indemnify Bike Index for
+        any damages finally awarded against, and for reasonable attorney’s fees incurred
+        by, Bike Index in connection with any such claim, demand, suit or proceeding;
+        provided, that Bike Index (a) promptly gives you written notice of the claim,
+        demand, suit or proceeding; (b) gives you sole control of the defense and
+        settlement of the claim, demand, suit or proceeding (provided that tou may
+        not settle any claim, demand, suit or proceeding unless the settlement unconditionally
+        releases Bike Index of all liability); and (c) provides to you all reasonable
+        assistance, at your expense.
+      your_use_of_the_service: Your use of the Service is at your sole risk. The service
+        is provided on an "as is" and "as available" basis.
