for_community_groups

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -405,6 +405,23 @@ en:
       tell_us_more_about_yourself: Tell us more about yourself.
       update_your_profile: Update your profile
   landing_pages:
+    for_community_groups:
+      bike_index_for_community_groups: Bike Index for Community Groups
+      the_most_widereaching_and_effective_tools: The most wide-reaching and effective tools against bike theft — period.
+      sign_up_for_free: Sign up for free
+      help_us_help_you: Help us help you
+      we_provide_free_and_easy_access_to_our_re: We provide free and easy access to our registry for anyone and everyone who rides a bicycle, in any capacity. Bike Index is a community-driven effort in recovering lost and stolen bikes. No matter the type of bike or cyclist, we want to keep all bikes rolling with the owners that need them.
+      spread_the_bike_index_word_html: Spread the Bike Index word to your constituents to get them riding protected. Create a free organization account %{link}.
+      partners_made_in_heaven: Partners made in heaven
+      gone_are_the_days_where_you_had_to_regist: Gone are the days where you had to register your bike in your neighborhood, county, city, state and country. Just register all bikes in Bike Index and a cyclists registration will be valid anywhere. Run registration drives? Host community cycling events? Let us know and we will send you Bike Index materials.
+      registrations_are_free_forever_join_bike_: Registrations are free. Forever. Join Bike Index and start registering today.
+      here: here
+      purchase_a_pack_of_advocacy_html: Purchase a pack of advocacy materials %{link}.
+      related_articles: 'Related articles:'
+      bike_index_launches_new_ambassadors_progr: Bike Index launches new Ambassadors program
+      bike_index_welcomes_stolen_bikes_nola: Bike Index welcomes Stolen Bikes NOLA
+      trusted_by_community_groups_everywhere: Trusted by community groups everywhere
+      used_by_community_groups_everywhere: Used by community groups everywhere
     for_bike_shops:
       bike_index_for_bike_shops: Bike Index for Bike Shops
       bikes_before_they: Unite against bike theft and protect your customers bikes before they're even out there.
