Normalize es, nl translation files

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2752,13 +2752,13 @@ es:
     currency:
       alphabetic_code: EUR
       format:
-        delimiter: '.'
-        format: '%n %u'
+        delimiter: "."
+        format: "%n %u"
         precision: 2
-        separator: ','
+        separator: ","
         significant: false
         strip_insignificant_zeros: false
-        unit: €
+        unit: "€"
     format:
       delimiter: TRME ,
       precision: TRME 3
