--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -2752,13 +2752,13 @@ nl:
     currency:
       alphabetic_code: EUR
       format:
-        delimiter: '.'
-        format: '%u%n'
+        delimiter: "."
+        format: "%u%n"
         precision: 2
-        separator: ','
+        separator: ","
         significant: false
         strip_insignificant_zeros: false
-        unit: €
+        unit: "€"
     format:
       delimiter: TRME ,
       precision: TRME 3
